tests/syntax_error/missing_return_type_function.jou
def foo():  # Error: return type must be specified with '->', or with '-> None' if the function doesn't return anything
    return
